--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,9 @@ dev_dependencies:
     sdk: flutter
 
 flutter_icons:
-  image_path: "icon.png"
+  image_path: "asset/images/icon.png"
   android: true
-  ios: true
+  ios: false
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
