--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   flutter_launcher_icons: ^0.9.0
+  provider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
